# Yahoo-Finance-Scraper

./: .gitignore  Cargo.toml  README.md  commit
src/: index.html  main.rs  modules.rs  tests.rs
src/modules/: balancesheet.rs  cli.rs  common.rs  export.rs  financials.rs  parser.rs
