[package]
name = "Yahoo-Finance-Scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.12"
tokio = { version = "1", features = ["full"] }
csv = "1.1"
clap = {version = "4.1.14", features = ["derive"]}
serde = { version = "1.0.159" , features = ["derive"] }
serde_json = "1.0.95"
